--- a/public/inc/css/styles.css
+++ b/public/inc/css/styles.css
@@ -29,6 +29,14 @@ header a, a:visited {
 text-decoration:none;
 color:#fcfcfc;
 }
+footer {
+  background-color:rgba(33, 33, 33, 0.9);
+  color:#fff;
+  display:block;
+  font: 14px/1.3 Arial,sans-serif;
+  margin-top: 10px;
+  position:relative;
+}
 .titre {
 font: bold 65px/60px Helvetica, Arial, Sans-serif;
 text-align: center;
